# habit-cli

./: .beads  .gitignore  Cargo.toml  FIRST_WEEK_PLAN.md  PORTING_NOTES.md  README.md  REVIEW_REPORT_OPUS45.md  REVIEW_REPORT_ORACLE.md  package.json
.claude/chat_logs/2026-02-04/: ce138c22-2f39-4919-b9a0-a5537b10492c.2026-02-04.10_07_52.md
.claude/raw_logs/2026-02-04/: ce138c22-2f39-4919-b9a0-a5537b10492c.jsonl
.github/workflows/: ci.yml
docs/: CLI_REFERENCE.md  EXAMPLES.md  IDEAS_REVIEW_ORACLE.md  MVP_SPEC.md  PROJECT_ANALYSIS.md  REVIEW_NOTES.md  ROADMAP_FEATURES.md  SMOKE.md  SPEC_DRAFT_A.md  SPEC_DRAFT_B.md  SPEC_DRAFT_C.md  SPEC_DRAFT_NP1.md  SPEC_DRAFT_P9.md  SPEC_F4_ROUTINES.md  SPEC_F5_NAG_STATE.md  SPEC_IDEAS_DRAFT_1.md  SPEC_V1_DETERMINISTIC.md  SPEC_V1_REVIEW_ORACLE.md
rust-src/: output.rs
scripts/: build.mjs
src/: checkins.js  checkins.rs  cli.js  completion.rs  date.js  date.rs  db.js  db.rs  declarations.rs  due.rs  error.rs  errors.js  excuses.rs  export.js  export.rs  habits.js  habits.rs  main.rs  model.rs  nag.rs  output.js  output.rs  penalty.rs  recap.rs  routines.rs  schedule.js  schedule.rs  stable_json.js  stable_json.rs  stats.js  stats.rs  status.js  status.rs  ts.rs
test/helpers/: cli.mjs
test/integration/: habit-cli.integration.test.mjs
test/lint/: repo-contract.test.mjs
tests/: cli.rs  cli_integration.rs  rust_cli_contract.rs
