[package]
name = "habit-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local, personal habit/routine tracking CLI"

[[bin]]
name = "habit"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
