[package]
name = "habit-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Local, personal habit/routine tracking CLI"

[[bin]]
name = "habit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.10"
